# Quent_study

./: .gitignore  README.md  pyproject.toml
config/: broker.yaml  execution.yaml  logging.yaml  risk.yaml  strategy.yaml
data/sample/: ohlcv.csv
docs/: architecture.md  assumptions.md  operations.md  strategy_spec.md
scripts/: run_backtest.py  run_live.py  run_paper.py
src/quent/: __init__.py  config.py
src/quent/analytics/: __init__.py  metrics.py  plots.py  tearsheet.py
src/quent/backtest/: __init__.py  engine.py  market_simulator.py  transaction_cost.py  validators.py
src/quent/core/: __init__.py  clock.py  constants.py  exceptions.py  types.py
src/quent/data/: __init__.py  adapters.py  loaders.py  validators.py
src/quent/execution/: __init__.py  broker_base.py  fills.py  live_broker_adapter.py  orders.py  paper_broker.py
src/quent/indicators/: __init__.py  moving_average.py
src/quent/portfolio/: __init__.py  cash.py  positions.py  risk.py  sizing.py
src/quent/reporting/: __init__.py  exporters.py
src/quent/signals/: __init__.py  ma_crossover.py
src/quent/storage/: __init__.py  run_registry.py  state_store.py  trade_log.py
tests/integration/: test_backtest_flow.py
tests/regression/: test_sample_regression.py
tests/unit/: test_brokers.py  test_costs_and_risk.py  test_metrics.py  test_moving_average.py  test_signals.py
